# tmc_wrs_gazebo

./: README.md
tmc_wrs_gazebo/: package.xml
tmc_wrs_gazebo_worlds/: CMakeLists.txt  README.md  package.xml
tmc_wrs_gazebo_worlds/models/trofast/: model.config
tmc_wrs_gazebo_worlds/models/wrc_bin_black/: model.config
tmc_wrs_gazebo_worlds/models/wrc_bin_green/: model.config
tmc_wrs_gazebo_worlds/models/wrc_bookshelf/: model.config  model.sdf
tmc_wrs_gazebo_worlds/models/wrc_container_a/: model.config
tmc_wrs_gazebo_worlds/models/wrc_container_b/: model.config
tmc_wrs_gazebo_worlds/models/wrc_frame/: model.config
tmc_wrs_gazebo_worlds/models/wrc_ground_plane/: model.config
tmc_wrs_gazebo_worlds/models/wrc_long_table/: model.config
tmc_wrs_gazebo_worlds/models/wrc_stair_like_drawer/: model.config
tmc_wrs_gazebo_worlds/models/wrc_tall_table/: model.config
tmc_wrs_gazebo_worlds/models/wrc_tray/: model.config
tmc_wrs_gazebo_worlds/models/ycb_002_master_chef_can/: model-1_4.sdf
tmc_wrs_gazebo_worlds/models/ycb_003_cracker_box/: model-1_4.sdf
tmc_wrs_gazebo_worlds/models/ycb_004_sugar_box/: model-1_4.sdf
tmc_wrs_gazebo_worlds/models/ycb_005_tomato_soup_can/: model-1_4.sdf
tmc_wrs_gazebo_worlds/models/ycb_006_mustard_bottle/: model-1_4.sdf
tmc_wrs_gazebo_worlds/models/ycb_007_tuna_fish_can/: model-1_4.sdf
tmc_wrs_gazebo_worlds/models/ycb_008_pudding_box/: model-1_4.sdf
tmc_wrs_gazebo_worlds/models/ycb_009_gelatin_box/: model-1_4.sdf
tmc_wrs_gazebo_worlds/scripts/: spawn_objects
tmc_wrs_gazebo_worlds/worlds/: wrs2020.world.xacro
(+59 files in other folders)
